fixed floating problem with overflow

--- a/week03/HW/style.css
+++ b/week03/HW/style.css
@@ -81,6 +81,22 @@ img{
   height:50px;
 }
 
+.toolbar:before {
+  display: block;
+  float:left;
+  background-image: url(images/fr.jpg);
+  content:" ";
+  width:40px;
+  height:50px;
+  margin:10px;
+}
+
+.toolbar:after {
+clear:both;
+display: block;
+content:" ";
+}
+
 ul{
   list-style: none;
 }
